# CAPIO-CL

./: .gitignore  CMakeLists.txt  README.md  capiocl.hpp  config.json  pyproject.toml  test-requirements.txt
.github/workflows/: ci-test.yml  python-bindings.yml  release-wheels.yml  release.yml
bindings/: python_bindings.cpp
bruno_webapi_tests/: add_consumer.bru  add_file_dependency.bru  add_producer.bru  get_commit_close_count.bru  get_commit_on_n_files_count.bru  get_commit_rule.bru  get_consumer.bru  get_directory.bru  get_excluded.bru  get_file_dependencies.bru  get_fire_rule.bru  get_permanent.bru  get_producer.bru  get_workflow_name.bru  remove_file.bru  set_commit_close_count.bru  set_commit_on_n_files_count.bru  set_commit_rule.bru  set_directory.bru  set_excluded.bru  set_fire_rule.bru  set_permanent.bru
capiocl/: api.h  configuration.h  engine.h  monitor.h  parser.h  serializer.h  webapi.h
doxygen/: .gitignore  Doxyfile  Doxygen.in  Makefile  configuration.md  extra.md  layout.xml  syntax_v1.md
include/: configuration.h  engine.h  monitor.h  parser.h  printer.h  serializer.h
py_capio_cl/: decorators.py
schema/: bundler.py  v2.json
src/: Engine.cpp  Monitor.cpp  Parser.cpp  Serializer.cpp  api.cpp  configuration.cpp  defaults.cpp  webapi.cpp
src/monitors/: FileSystem.cpp  Interface.cpp  Multicast.cpp
src/parsers/: v1.1.cpp  v1.cpp  v1.hpp  v1_1.cpp  v2.cpp
src/serializers/: v1.1.cpp  v1.cpp
tests/: main.cpp
tests/cpp/: main.cpp  test_apis.hpp  test_configuration.hpp  test_engine.hpp  test_exceptions.hpp  test_monitor.hpp  test_serialize_deserialize.hpp
tests/jsons/: V1_test0.json  V1_test17.json  V1_test18.json  V1_test22.json  V1_test25.json  V1_test4.json  V1_test9.json
tests/jsons/V1_1/: test24.json
tests/python/: test_bindings.py  test_engine.py  test_parser_serializer.py
tests/tomls/: sample1.toml  sample3.toml
utilities/: capio_cl_builder.h  capiocl-utils.cpp
